WIP: explicitly check for de-opt